--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-docker.io (0.6.7+dfsg1-1) unstable; urgency=low
+docker.io (0.6.7+dfsg1-1) unstable; urgency=medium
 
   * Initial release (Closes: #706060, #730569)
 
