Update Daniel to get his pretty docker.com email, because I'm really crazy and pedantic

--- a/debian/docker.io.1
+++ b/debian/docker.io.1
@@ -51,4 +51,4 @@ The full docker.io documentation is at http://docs.docker.io
 .br
 In Debian, documentation is available on /usr/share/doc/docker.io/README.md.gz
 .SH AUTHOR
-Daniel Mizyrycki <\*(T<daniel@dotcloud.com\*(T>>
+Daniel Mizyrycki <\*(T<daniel@docker.com\*(T>>
