Note that this release closes bug 734758

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 docker.io (0.6.7+dfsg1-3) UNRELEASED; urgency=medium
 
   * Fixed FTBFS on non-amd64 platforms by setting the correct GOPATH.
-  * Fixed issues with Docker finding a valid dockerinit.
+  * Fixed issues with Docker finding a valid dockerinit (Closes: #734758).
   * Added aufs-tools dependency.
 
  -- Tianon Gravi <admwiggin@gmail.com>  Thu, 09 Jan 2014 15:26:38 +0000
