--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-docker.io (0.6.7+dfsg1-3) UNRELEASED; urgency=medium
+docker.io (0.6.7+dfsg1-3) unstable; urgency=medium
 
   * Fixed FTBFS on non-amd64 platforms by setting the correct GOPATH.
   * Fixed issues with Docker finding a valid dockerinit (Closes: #734758).
   * Added aufs-tools dependency.
 
- -- Tianon Gravi <admwiggin@gmail.com>  Thu, 09 Jan 2014 15:26:38 +0000
+ -- Tianon Gravi <admwiggin@gmail.com>  Thu, 09 Jan 2014 20:10:20 -0500
 
 docker.io (0.6.7+dfsg1-2) unstable; urgency=medium
 
