--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+docker.io (0.7.1+dfsg1-1) UNRELEASED; urgency=medium
+
+  * Updated with newer upstream release.
+
+ -- Tianon Gravi <admwiggin@gmail.com>  Sun, 12 Jan 2014 21:03:10 -0700
+
 docker.io (0.6.7+dfsg1-3) unstable; urgency=medium
 
   * Fixed FTBFS on non-amd64 platforms by setting the correct GOPATH.
