--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-docker.io (0.6.7+dfsg1-4) UNRELEASED; urgency=medium
+docker.io (0.6.7+dfsg1-4.1) UNRELEASED; urgency=medium
 
   * Fixed "docker: command not found" errors while using bash tab completion.
 
- -- Tianon Gravi <admwiggin@gmail.com>  Mon, 13 Jan 2014 05:27:13 +0000
+ -- Prach Pongpanich <prachpub@gmail.com>  Mon, 13 Jan 2014 05:42:38 +0000
 
 docker.io (0.6.7+dfsg1-3) unstable; urgency=medium
 
