--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,17 @@
-docker.io (0.7.1+dfsg1-2) UNRELEASED; urgency=medium
+docker.io (0.7.6+dfsg1-1) UNRELEASED; urgency=medium
 
+  [ Johan Euphrosine ]
+  * Updated to 0.7.6.
+  * Added dependency to gocapability.
+  * Clean patches.
+
+  [ Tianon Gravi ]
   * Added contrib/mk* scripts from upstream into /usr/share/docker.io/contrib
     (Closes: #736068).
   * Added upstream udev rules file to stop device-mapper devices and mounts from
     appearing in desktop environments through udisks.
 
- -- Tianon Gravi <admwiggin@gmail.com>  Sun, 19 Jan 2014 20:42:13 +0000
+ -- Johan Euphrosine <proppy@google.com>  Tue, 21 Jan 2014 13:59:39 -0800
 
 docker.io (0.7.1+dfsg1-1) unstable; urgency=medium
 
