--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+docker.io (0.7.6+dfsg1-2) UNRELEASED; urgency=medium
+
+  [ Prach Pongpanich ]
+  * Added zsh completion.
+
+ -- Tianon Gravi <admwiggin@gmail.com>  Tue, 04 Feb 2014 00:09:17 +0000
+
 docker.io (0.7.6+dfsg1-1) unstable; urgency=medium
 
   [ Johan Euphrosine ]
