--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-docker.io (0.7.6+dfsg1-2) UNRELEASED; urgency=medium
+docker.io (0.8.0+dfsg1-1) UNRELEASED; urgency=medium
 
   [ Prach Pongpanich ]
   * Added zsh completion.
+
+  [ Tianon Gravi ]
+  * Updated to 0.8.0 upstream release.
 
  -- Tianon Gravi <admwiggin@gmail.com>  Tue, 04 Feb 2014 00:09:17 +0000
 
