Add note about new Description text in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ docker.io (0.8.0+dfsg1-1) UNRELEASED; urgency=medium
   [ Tianon Gravi ]
   * Updated to 0.8.0 upstream release.
   * Added vim syntax files in new vim-syntax-docker package.
+  * Added note about minimum recommended kernel version to Description.
 
  -- Tianon Gravi <admwiggin@gmail.com>  Fri, 07 Feb 2014 23:52:16 +0000
 
