--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-docker.io (0.8.1+dfsg1-1) UNRELEASED; urgency=medium
+docker.io (0.8.1+dfsg1-1) unstable; urgency=medium
 
-  [ Tianon Gravi ]
   * Updated to 0.8.1 upstream release.
 
- -- Tianon Gravi <admwiggin@gmail.com>  Tue, 18 Feb 2014 21:37:03 -0700
+ -- Tianon Gravi <admwiggin@gmail.com>  Tue, 25 Feb 2014 20:56:31 -0500
 
 docker.io (0.8.0+dfsg1-2) unstable; urgency=medium
 
