--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+docker.io (0.9.1~dfsg1-1) unstable; urgency=medium
+
+  * Added notes about "root-equivalence" to README.Debian (Closes: #742387).
+  * Updated to 0.9.1 upstream release.
+  * Added cgroupfs-mount dependency (Closes: #742641).
+
+ -- Tianon Gravi <admwiggin@gmail.com>  Tue, 25 Mar 2014 22:59:12 -0600
+
 docker.io (0.9.0+dfsg1-1) unstable; urgency=medium
 
   * Updated README.Debian to not be quite so outdated (Closes: #740850).
