--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ docker.io (0.9.1~dfsg1-2) UNRELEASED; urgency=medium
 
   * Added upstream apparmor patch to fix newer apparmor versions (such as the
     version appearing in Ubuntu 14.04).
+  * Added mkimage-* docker.io binary name patches (Closes: #740855).
 
  -- Tianon Gravi <admwiggin@gmail.com>  Tue, 08 Apr 2014 09:34:24 -0600
 
