--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-docker.io (0.9.1~dfsg1-2) UNRELEASED; urgency=medium
+docker.io (0.9.1~dfsg1-2) unstable; urgency=medium
 
   * Added upstream apparmor patch to fix newer apparmor versions (such as the
     version appearing in Ubuntu 14.04).
   * Added mkimage-* docker.io binary name patches (Closes: #740855).
 
- -- Tianon Gravi <admwiggin@gmail.com>  Tue, 08 Apr 2014 09:34:24 -0600
+ -- Tianon Gravi <admwiggin@gmail.com>  Tue, 08 Apr 2014 23:19:08 -0400
 
 docker.io (0.9.1~dfsg1-1) unstable; urgency=medium
 
